--- a/dc-ldev.scss
+++ b/dc-ldev.scss
@@ -1,12 +1,22 @@
 /*-- scss:defaults --*/
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap');
+
 // colours
 
 $body-color: #191919;
 $presentation-heading-color: #00A6D6;
-$presentation-font-size-root: 38px;
+$presentation-font-size-root: 32px;
 $dark-bg-code-color: #d600a6;
 $dark-bg-link-color: #a6d600;
+
+// fonts
+
+$font-family-sans-serif: "Noto Sans";
+$font-family-monospace: "Noto Sans Mono";
+$presentation-h1-font-size: 2.8em;
+$presentation-h2-font-size: 2em;
 
 /*-- scss:rules --*/
 
